--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,6 +1,6 @@
 .Menu {
     margin: 0;
-    border-right: 1px solid rgba( 0, 0, 0, .95);
+    border-right: 1px solid #6c757d;
     grid-area: sidenav;
     grid-row: 2 3;
 }
